[package]
name = "v4-create2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.5.1"
hex = "0.4.3"
rand = "0.8.5"
sha3 = "0.10.8"
tiny-keccak = { version = "2.0.0", features = ["sha3"] }
